[workspace]
members = ["syscaller", "syscaller-wrap-macro"]
resolver = "2"

[workspace.package]
authors = ["mathyslv <mathys.lv@hotmail.com>"]
categories = ["os::linux-apis", "development-tools", "no-std", "api-bindings"]
documentation = "https://docs.rs/syscaller"
edition = "2024"
homepage = "https://github.com/mathyslv/syscaller"
keywords = ["linux", "syscalls", "in-memory"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mathyslv/syscaller"
rust-version = "1.85.1"
version = "0.2.0"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
