[package]
name = "syscaller"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
macro = ["syscaller-wrap-macro"]

[dependencies]
syscaller-wrap-macro = { path = "../syscaller-wrap-macro", optional = true }
