[package]
name = "syscaller"
description = "No-std Linux direct syscall library"

authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["macro"]
macro = ["dep:syscaller-wrap-macro"]

[dependencies]
syscaller-wrap-macro = { path = "../syscaller-wrap-macro", optional = true, version = "0.2.0" }
